--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,10 @@
 {
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "router/**/*"],
   "compilerOptions": {
     "outDir": "dist",
     "target": "ESNext",
     "module": "ESNext",
     "lib": ["ESNext", "DOM"],
-    "noImplicitThis": true,
     "strict": true,
     "strictPropertyInitialization": false,
     "plugins": [
