--- a/package.json
+++ b/package.json
@@ -29,12 +29,22 @@
   },
   "keywords": [],
   "author": "_Kerman",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KermanX/refina"
+  },
+  "readme": "https://github.com/KermanX/refina#readme",
+  "bugs": "https://github.com/KermanX/refina/issues",
+  "license": "MIT",
   "devDependencies": {
     "@swc/cli": "^0.1.62",
     "@swc/core": "^1.3.73",
+    "autoprefixer": "^10.4.15",
     "chokidar": "^3.5.3",
     "magic-string": "^0.30.2",
+    "postcss": "^8.4.27",
     "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
     "tsserver-plugin": "link:..\\tsserver-plugin",
     "typescript": "^5.1.0",
     "vite": "^4.4.8",
