--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "lib": ["ESNext", "DOM"],
     "strict": true,
     "strictPropertyInitialization": false,
+    "experimentalDecorators": true,
     "plugins": [
       {
         "name": "tsserver-plugin"
