--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "scripts": {
     "build": "vite build",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prettier": "prettier --write .",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "_Kerman",
@@ -40,13 +42,17 @@
   "devDependencies": {
     "autoprefixer": "^10.4.15",
     "chokidar": "^3.5.3",
+    "husky": "^8.0.3",
+    "lint-staged": "^14.0.0",
     "magic-string": "^0.30.2",
     "postcss": "^8.4.27",
     "prettier": "^3.0.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
-    "vite-plugin-inspect": "^0.7.35",
-    "web-imgui-plugin": "../web-imgui-plugin"
+    "vite-plugin-inspect": "^0.7.35"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
