update example: use tailwindcss instead

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
   },
   "tailwindCSS.experimental.classRegex": [
     "_.\\$cls`([^`]*)`",
+    "_.\\$rootCls`([^`]*)`",
     ["_.\\$cls\\(([^\\)]*)\\)", "\\\"(.*?)\\\""]
   ]
 }
