--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,9 +3,9 @@
     "strings": "on"
   },
   "tailwindCSS.experimental.classRegex": [
-    ["_.\\$cls`([\\s\\S]*?)`", "(\\S+)"],
-    ["_.\\$rootCls`([^`]*)`", "(\\S+)"],
-    ["_.\\$cls\\(([^\\)]*)\\)", "\\\"(.*?)\\\""]
+    ["\\$cls`([\\s\\S]*?)`", "(\\S+)"],
+    ["\\$rootCls`([^`]*)`", "(\\S+)"],
+    ["\\$cls\\(([^\\)]*)\\)", "\\\"(.*?)\\\""]
   ],
   "[*.r.js][*.r.ts]": {
     "editor.guides.bracketPairs": "active"
