add MDIcon support

--- a/package.json
+++ b/package.json
@@ -55,5 +55,8 @@
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
+  },
+  "dependencies": {
+    "material-icons": "^1.13.11"
   }
 }
