--- a/packages/examples/gh-login/package.json
+++ b/packages/examples/gh-login/package.json
@@ -20,6 +20,7 @@
     "vite-plugin-refina": "workspace:^"
   },
   "dependencies": {
+    "@refina/basic-components": "workspace:^",
     "refina": "workspace:^"
   }
 }
