--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "pnpm run dev:fluentui",
     "dev:app": "pnpm -r --parallel --filter \"@refina/example-app...\" run dev",
     "dev:fluentui": "pnpm -r --parallel --filter \"@refina/example-fluentui...\" run dev",
+    "dev:mdui": "pnpm -r --parallel --filter \"@refina/example-mdui...\" run dev",
     "dev:gh-login": "pnpm -r --parallel --filter \"@refina/example-gh-login...\" run dev",
     "build": "pnpm -r run build",
     "check": "pnpm -r --parallel run check",
