update exports field of package.json of core

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,12 +15,8 @@
   "main": "./src/index.ts",
   "types": "./src/index.ts",
   "exports": {
-    ".": {
-      "import": {
-        "types": "./src/index.ts",
-        "default": "./src/index.ts"
-      }
-    }
+    ".": "./src/index.ts",
+    "./*": "./*"
   },
   "scripts": {
     "check": "tsc --noEmit"
