split transformer from vite-plugin-refina

--- a/packages/transformer/tsconfig.json
+++ b/packages/transformer/tsconfig.json
@@ -1,10 +1,10 @@
 {
-  "include": ["./plugin.ts"],
+  "include": ["./src"],
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "lib": ["ESNext", "DOM"],
+    "lib": ["ESNext"],
     "strict": true
   }
 }
