adapt to Node.js version 20

--- a/packages/fluentui-icons/package.json
+++ b/packages/fluentui-icons/package.json
@@ -17,7 +17,7 @@
     "./*": "./dist/*"
   },
   "scripts": {
-    "build": "ts-node --esm --project ./tsconfig.json ./generator.ts",
+    "build": "node --no-warnings=ExperimentalWarning --loader ts-node/esm ./generator.ts",
     "check": "tsc --noEmit",
     "prepare": "pnpm build"
   },
