add packages `mdui2` and `example-mdui2`

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dev:app": "pnpm -r --parallel --filter \"@refina/example-app...\" run dev",
     "dev:fluentui": "pnpm -r --parallel --filter \"@refina/example-fluentui...\" run dev",
     "dev:mdui": "pnpm -r --parallel --filter \"@refina/example-mdui...\" run dev",
+    "dev:mdui2": "pnpm -r --parallel --filter \"@refina/example-mdui2...\" run dev",
     "dev:gh-login": "pnpm -r --parallel --filter \"@refina/example-gh-login...\" run dev",
     "build": "pnpm -r run build",
     "check": "pnpm -r --parallel run check",
