--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "pnpm": "8"
   },
   "scripts": {
-    "dev": "pnpm run dev:fluentui",
-    "dev:app": "pnpm -r --parallel --filter \"@refina/example-app...\" run dev",
+    "dev": "pnpm run dev:gallery",
+    "dev:gallery": "pnpm -r --parallel --filter \"@refina/gallery\" run dev",
     "dev:fluentui": "pnpm -r --parallel --filter \"@refina/example-fluentui...\" run dev",
     "dev:mdui": "pnpm -r --parallel --filter \"@refina/example-mdui...\" run dev",
     "dev:mdui2": "pnpm -r --parallel --filter \"@refina/example-mdui2...\" run dev",
