--- a/packages/examples/gallery/package.json
+++ b/packages/examples/gallery/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@refina/example-fluentui",
+  "name": "@refina/gallery",
   "version": "0.0.0",
   "type": "module",
   "private": true,
@@ -9,18 +9,20 @@
     "preview": "vite preview",
     "check": "tsc --noEmit"
   },
-  "exports": {
-    ".": "./src/app.r.ts"
-  },
   "devDependencies": {
     "@refina/tsconfig": "workspace:^",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
-    "vite-plugin-inspect": "^0.7.35",
     "vite-plugin-refina": "workspace:^"
   },
   "dependencies": {
-    "@refina/fluentui": "workspace:^",
+    "@refina/basic-components": "workspace:^",
+    "@refina/example-fluentui": "workspace:^",
+    "@refina/example-gh-login": "workspace:^",
+    "@refina/example-mdui2": "workspace:^",
     "refina": "workspace:^"
   }
 }
