--- a/packages/examples/mdui2/package.json
+++ b/packages/examples/mdui2/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview",
     "check": "tsc --noEmit"
   },
+  "exports": {
+    ".": "./src/app.r.ts"
+  },
   "devDependencies": {
     "@refina/tsconfig": "workspace:^",
     "typescript": "^5.1.6",
