--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,15 @@
   },
   "tailwindCSS.experimental.classRegex": [
     ["\\$cls`([\\s\\S]*?)`", "(\\S+)"],
+    ["\\$cls\\(([^\\)]*)\\)", "\\\"(.*?)\\\""],
     ["\\$rootCls`([^`]*)`", "(\\S+)"],
-    ["\\$cls\\(([^\\)]*)\\)", "\\\"(.*?)\\\""]
+    ["\\$rootCls\\(([^\\)]*)\\)", "\\\"(.*?)\\\""],
+    ["\\$bodyCls`([^`]*)`", "(\\S+)"],
+    ["\\$bodyCls\\(([^\\)]*)\\)", "\\\"(.*?)\\\""],
+    ["\\$clsFunc`([\\s\\S]*?)`", "(\\S+)"],
+    ["\\$clsFunc\\(([^\\)]*)\\)", "\\\"(.*?)\\\""],
+    ["\\$clsStr`([\\s\\S]*?)`", "(\\S+)"],
+    ["\\$clsStr\\(([^\\)]*)\\)", "\\\"(.*?)\\\""]
   ],
   "[*.r.js][*.r.ts]": {
     "editor.guides.bracketPairs": "active"
