--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dev:mdui": "pnpm -r --parallel --filter \"@refina/example-mdui...\" run dev",
     "dev:mdui2": "pnpm -r --parallel --filter \"@refina/example-mdui2...\" run dev",
     "dev:gh-login": "pnpm -r --parallel --filter \"@refina/example-gh-login...\" run dev",
+    "dev:docs": "pnpm -r --parallel --filter \"@refina/docs...\" run dev",
     "test": "vitest --coverage",
     "coverage": "vitest run --coverage",
     "build": "pnpm -r run build",
