fix exports of `@refina/tsconfig`

--- a/packages/tsconfig/package.json
+++ b/packages/tsconfig/package.json
@@ -14,10 +14,7 @@
   "main": "./tsconfig.json",
   "types": "./tsconfig.json",
   "exports": {
-    "import": {
-      "types": "./tsconfig.json",
-      "default": "./tsconfig.json"
-    }
+    ".": "./tsconfig.json"
   },
   "scripts": {},
   "author": "_Kerman",
