add README to vite-plugin

--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -8,7 +8,8 @@
   ],
   "files": [
     "dist",
-    "plugin.ts"
+    "plugin.ts",
+    "README.md"
   ],
   "type": "module",
   "main": "./dist/plugin.js",
