--- a/packages/mdui/package.json
+++ b/packages/mdui/package.json
@@ -9,7 +9,8 @@
     "components"
   ],
   "files": [
-    "src"
+    "src",
+    "README.md"
   ],
   "type": "module",
   "main": "./src/index.ts",
