fix base path of docs in gh-pages

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -41,14 +41,17 @@ jobs:
           version: 8
       - name: Install dependencies
         run: pnpm i
-      - name: Build docs
+      - name: Build dependencies
         run: pnpm build:docs
+      - name: Build docs
+        run: pnpm build -- --base /refina/
+        working-directory: ./docs
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: './docs/.vitepress/dist'
+          path: "./docs/.vitepress/dist"
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v3
