--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,9 +13,7 @@
     ["\\$clsStr`([\\s\\S]*?)`", "(\\S+)"],
     ["\\$clsStr\\(([^\\)]*)\\)", "\\\"(.*?)\\\""]
   ],
-  "[*.r.js][*.r.ts]": {
-    "editor.guides.bracketPairs": "active"
-  },
   "editor.guides.bracketPairs": "active",
-  "vitest.commandLine": "pnpm exec vitest --coverage"
+  "vitest.commandLine": "pnpm exec vitest --coverage",
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
