fix `files` of `package.json` of core

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,9 @@
     "typescript"
   ],
   "files": [
-    "src"
+    "src",
+    "README.md",
+    "tsconfig.json"
   ],
   "type": "module",
   "main": "./src/index.ts",
