--- a/packages/examples/gallery/package.json
+++ b/packages/examples/gallery/package.json
@@ -16,6 +16,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.1.6",
     "vite": "^4.4.8",
+    "vite-plugin-ms-clarity": "^1.0.0",
     "vite-plugin-refina": "workspace:^"
   },
   "dependencies": {
