add README to basic components

--- a/packages/basic-components/package.json
+++ b/packages/basic-components/package.json
@@ -7,7 +7,8 @@
     "components"
   ],
   "files": [
-    "src"
+    "src",
+    "README.md"
   ],
   "type": "module",
   "main": "./src/index.ts",
