--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,3 +1,6 @@
 files:
   - source: /docs/**/*.md
+    ignore:
+      - /docs/zh
+      - /docs/index.md
     translation: /docs/%two_letters_code%/**/%original_file_name%
