split hmr-compiler into `hmr` package

--- a/packages/vite-plugin/package.json
+++ b/packages/vite-plugin/package.json
@@ -42,6 +42,7 @@
   "bugs": "https://github.com/KermanX/refina/issues",
   "license": "MIT",
   "devDependencies": {
+    "@refina/hmr": "workspace:^",
     "@refina/transformer": "workspace:^",
     "@types/node": "^20.6.5",
     "tsup": "^7.2.0",
