--- a/docs/package.json
+++ b/docs/package.json
@@ -27,6 +27,8 @@
   },
   "dependencies": {
     "@refina/basic-components": "workspace:^",
+    "@refina/repl": "^0.0.4",
+    "@vue/theme": "^2.2.5",
     "refina": "workspace:^",
     "vue": "^3.3.9"
   }
