--- a/docs/package.json
+++ b/docs/package.json
@@ -22,12 +22,13 @@
   "license": "MIT",
   "devDependencies": {
     "@refina/tsconfig": "workspace:^",
+    "js-confetti": "^0.12.0",
     "vite-plugin-refina": "workspace:^",
     "vitepress": "1.0.0-rc.31"
   },
   "dependencies": {
     "@refina/basic-components": "workspace:^",
-    "@refina/repl": "^0.0.4",
+    "@refina/repl": "^0.0.6",
     "@vue/theme": "^2.2.5",
     "refina": "workspace:^",
     "vue": "^3.3.9"
