--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,6 +4,7 @@ files:
       - /docs/zh
       - /docs/index.md
       - /docs/tutorial
+      - /docs/README.md
     translation: /docs/%two_letters_code%/**/%original_file_name%
   - source: /docs/tutorial/**/*
     translation: /docs/%two_letters_code%/tutorial/**/%original_file_name%
