remove `experimentalDecorators` flag from `tsconfig.json`

--- a/packages/tsconfig/tsconfig.json
+++ b/packages/tsconfig/tsconfig.json
@@ -5,7 +5,6 @@
     "moduleResolution": "Bundler",
     "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "strict": true,
-    "strictPropertyInitialization": false,
-    "experimentalDecorators": true
+    "strictPropertyInitialization": false
   }
 }
