--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "create-refina",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "An easy way to start a Refina project.",
   "keywords": [
     "refina",
@@ -36,6 +36,7 @@
     "@types/node": "^20.6.5",
     "@types/prompts": "^2.4.9",
     "chalk": "^5.3.0",
+    "latest-version": "^7.0.0",
     "prompts": "^2.4.2",
     "tsup": "^7.2.0",
     "typescript": "^5.2.2"
