add `fAvatar` component

--- a/packages/examples/fluentui/package.json
+++ b/packages/examples/fluentui/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "@refina/fluentui": "workspace:^",
+    "@refina/fluentui-icons": "workspace:^",
     "refina": "workspace:^"
   }
 }
