--- a/packages/fluentui/package.json
+++ b/packages/fluentui/package.json
@@ -8,21 +8,27 @@
     "components"
   ],
   "files": [
-    "src"
+    "src",
+    "dist",
+    "tsconfig.json",
+    "README.md"
   ],
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": {
-        "types": "./src/index.ts",
-        "default": "./src/index.ts"
-      }
-    }
+      "default": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./*": "./*"
   },
   "scripts": {
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "build": "vite build",
+    "dev": "vite build --watch",
+    "prepublishOnly": "npm run check && npm run build"
   },
   "author": "_Kerman",
   "repository": {
@@ -34,7 +40,9 @@
   "license": "MIT",
   "devDependencies": {
     "@refina/tsconfig": "workspace:^",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vite": "^4.5.2",
+    "vite-plugin-refina": "workspace:^"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.5.3",
