--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -10,18 +10,26 @@
   ],
   "files": [
     "src",
-    "README.md",
-    "tsconfig.json"
+    "dist",
+    "tsconfig.json",
+    "README.md"
   ],
   "type": "module",
-  "main": "./src/index.ts",
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "exports": {
-    ".": "./src/index.ts",
+    ".": {
+      "default": "./dist/index.js",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
     "./*": "./*"
   },
   "scripts": {
-    "check": "tsc --noEmit"
+    "check": "tsc --noEmit",
+    "build": "vite build",
+    "dev": "vite build --watch",
+    "prepublishOnly": "npm run check && npm run build"
   },
   "author": "_Kerman",
   "repository": {
@@ -34,6 +42,7 @@
   "devDependencies": {
     "@refina/tsconfig": "workspace:^",
     "typescript": "^5.2.2",
+    "vite": "^4.5.2",
     "vite-plugin-refina": "workspace:^"
   }
 }
