add build step before testing

--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "dev:gh-login": "pnpm -r --parallel --filter \"@refina/example-gh-login...\" run dev",
     "dev:docs": "pnpm -r --parallel --filter \"@refina/docs...\" run dev",
     "dev:vite-plugin": "pnpm -r --parallel --filter \"vite-plugin-refina...\" run dev",
-    "test": "vitest --coverage",
+    "test": "pnpm run build:tests && vitest --coverage",
     "coverage": "vitest run --coverage",
     "build": "pnpm -r run build",
     "build:docs": "pnpm -r --filter \"@refina/docs...\" run build",
+    "build:tests": "pnpm -r --filter \"@refina/tests...\" run build",
     "check": "pnpm -r --parallel run check",
     "format": "prettier --write .",
     "prepare": "husky install",
