--- a/packages/fluentui/package.json
+++ b/packages/fluentui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@refina/fluentui",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "The FluentUI components for Refina framework.",
   "keywords": [
     "refina",
@@ -18,9 +18,9 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "default": "./dist/index.js",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "default": "./dist/index.js"
     },
     "./*": "./*"
   },
