--- a/packages/mdui/package.json
+++ b/packages/mdui/package.json
@@ -19,9 +19,9 @@
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "default": "./dist/index.js",
+      "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "default": "./dist/index.js"
     },
     "./*": "./*"
   },
